<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_coming_soon"
        android:icon="@drawable/ic_comingsoon"
        android:title="@string/title_coming_soon" />

    <item
        android:id="@+id/navigation_saved_contents"
        android:icon="@drawable/ic_saved_contents"
        android:title="@string/title_saved_contents" />

    <item
        android:id="@+id/navigation_else"
        android:icon="@drawable/ic_else"
        android:title="@string/title_else" />

</menu>
